test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/NEW_Cost_Assumption_Set__c.object-meta.xml
<CustomObject>
    <label>CRU</label>
    <nameField>
        <label>CRU</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CRUs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>