test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/fields/AC_Bos__c.field-meta.xml
<CustomField>
    <fullName>AC_Bos__c</fullName>
    <formula>CE_AC_Bos__c +  Design_AEP__r.AC_Bos__c *(1 + Tax_Rate_Material__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AC Bos ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>