test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/fields/Access_Road_Length__c.field-meta.xml
<CustomField>
    <fullName>Access_Road_Length__c</fullName>
    <formula>Design_AEP__r.Access_Road_Length_LF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Access Road Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>