test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/fields/Calculations_Done__c.field-meta.xml
<CustomField>
    <fullName>Calculations_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calculations Done</label>
    <type>Checkbox</type>
</CustomField>