test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/fields/CE_Racking_Foundations__c.field-meta.xml
<CustomField>
    <fullName>CE_Racking_Foundations__c</fullName>
    <label>CE Racking &amp; Foundations $</label>
    <summarizedField>Cost_Estimation_Equipment_Selection__c.Cost__c</summarizedField>
    <summaryFilterItems>
        <field>Cost_Estimation_Equipment_Selection__c.Type__c</field>
        <operation>equals</operation>
        <value>Racking</value>
    </summaryFilterItems>
    <summaryForeignKey>Cost_Estimation_Equipment_Selection__c.NEW_Cost_Assumption_Set__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>