test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/fields/CE_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>CE_Total_Cost__c</fullName>
    <label>CE Total Cost</label>
    <summarizedField>Cost_Estimation_Equipment_Selection__c.Cost__c</summarizedField>
    <summaryForeignKey>Cost_Estimation_Equipment_Selection__c.NEW_Cost_Assumption_Set__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>