test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/fields/Check_Prevailing__c.field-meta.xml
<CustomField>
    <fullName>Check_Prevailing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Prevailing</label>
    <type>Checkbox</type>
</CustomField>