test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/fields/Check_Taxes__c.field-meta.xml
<CustomField>
    <fullName>Check_Taxes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Taxes</label>
    <type>Checkbox</type>
</CustomField>