test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/fields/Civil_Installation_W__c.field-meta.xml
<CustomField>
    <fullName>Civil_Installation_W__c</fullName>
    <formula>Civil_Installation__c /(System_Size_kW_DC__c  * 1000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Civil Installation ($/W)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>