test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/fields/DA_Other_Material__c.field-meta.xml
<CustomField>
    <fullName>DA_Other_Material__c</fullName>
    <formula>Design_AEP__r.Other_Material__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DA Other Material ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>