test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Brief description of the CRU</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>