test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/fields/Design_AEP__c.field-meta.xml
<CustomField>
    <fullName>Design_AEP__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Design &amp; AEP</label>
    <referenceTo>Design_AEP__c</referenceTo>
    <relationshipName>NEW_Cost_Assumption_Sets</relationshipName>
    <type>Lookup</type>
</CustomField>