test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/fields/Design_Contingency_COQ_W__c.field-meta.xml
<CustomField>
    <fullName>Design_Contingency_COQ_W__c</fullName>
    <formula>Design_Contingency_COQ__c /(  System_Size_kW_DC__c   * 1000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Design Contingency / COQ ($/W)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>