test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/fields/Direct_Labor__c.field-meta.xml
<CustomField>
    <fullName>Direct_Labor__c</fullName>
    <formula>Mechanical_Installation__c +  Civil_Installation__c +  Electrical_Installation__c +  Other_Installation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direct Labor ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>