test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/fields/Direct_Material__c.field-meta.xml
<CustomField>
    <fullName>Direct_Material__c</fullName>
    <formula>Modules__c +  Inverters__c   +  Racking_Foundations__c +  Other_Material__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direct Material ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>