test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/fields/Direct_Material_W__c.field-meta.xml
<CustomField>
    <fullName>Direct_Material_W__c</fullName>
    <formula>Direct_Material__c /(  System_Size_kW_DC__c  * 1000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direct Material ($/W)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>