test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/fields/Engineering_W__c.field-meta.xml
<CustomField>
    <fullName>Engineering_W__c</fullName>
    <formula>Engineering__c /( System_Size_kW_DC__c * 1000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engineering ($/W)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>