test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/fields/Fenced_Area__c.field-meta.xml
<CustomField>
    <fullName>Fenced_Area__c</fullName>
    <formula>Design_AEP__r.Fenced_Area_sqft__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fenced Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>