test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/fields/Fencing_Perimeter__c.field-meta.xml
<CustomField>
    <fullName>Fencing_Perimeter__c</fullName>
    <formula>Design_AEP__r.Fencing_Perimeter_LF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fencing Perimeter</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>