test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/fields/Foundation_Count__c.field-meta.xml
<CustomField>
    <fullName>Foundation_Count__c</fullName>
    <formula>Design_AEP__r.Foundation_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Foundation Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>