test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/fields/Indirect_Labor__c.field-meta.xml
<CustomField>
    <fullName>Indirect_Labor__c</fullName>
    <formula>Real_Estate__c +  Environmental__c +  Permit_Fees__c +  Survey__c +  Engineering__c +  Inspections__c +  Utility__c +  Design_Contingency_COQ__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indirect Labor ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>