test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/fields/Inverters__c.field-meta.xml
<CustomField>
    <fullName>Inverters__c</fullName>
    <formula>(Design_AEP__r.MLPE__c + Design_AEP__r.Inverters__c)*(1 +  Tax_Rate_Material__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inverters + MLPE ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>