test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/fields/Module_Max_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Module_Max_Per_Unit__c</fullName>
    <formula>Design_AEP__r.Module_Max_Per_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Module Max $ Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>