test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/fields/Modules__c.field-meta.xml
<CustomField>
    <fullName>Modules__c</fullName>
    <formula>Design_AEP__r.Modules_cost__c * (1 + Tax_Rate_Material__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modules ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>