test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/fields/MV_Equipment__c.field-meta.xml
<CustomField>
    <fullName>MV_Equipment__c</fullName>
    <formula>CE_MV_Equipment__c  + Design_AEP__r.MV_Equipment__c  *(1 + Tax_Rate_Material__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MV Equipment ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>