test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/fields/of_Inverters__c.field-meta.xml
<CustomField>
    <fullName>of_Inverters__c</fullName>
    <formula>Design_AEP__r.Total_Inverters__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Inverters</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>