test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/fields/of_Trees_Cleared__c.field-meta.xml
<CustomField>
    <fullName>of_Trees_Cleared__c</fullName>
    <formula>Design_AEP__r.of_Trees_Cleared__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Trees Cleared</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>