test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/fields/Other_Material__c.field-meta.xml
<CustomField>
    <fullName>Other_Material__c</fullName>
    <formula>(CE_Total_Cost__c -  CE_Racking_Foundations__c) +  DA_Other_Material__c*(1 + Tax_Rate_Material__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Material ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>