test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/fields/Pad_Count__c.field-meta.xml
<CustomField>
    <fullName>Pad_Count__c</fullName>
    <formula>Design_AEP__r.Pad_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pad Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>