test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/fields/Permit_Fees_W__c.field-meta.xml
<CustomField>
    <fullName>Permit_Fees_W__c</fullName>
    <formula>Permit_Fees__c /( System_Size_kW_DC__c * 1000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Permit &amp; Fees ($/W)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>