test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/fields/Prevailing_Wage__c.field-meta.xml
<CustomField>
    <fullName>Prevailing_Wage__c</fullName>
    <label>Prevailing Wage (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>