test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/fields/Prevailing_Wage_Cost__c.field-meta.xml
<CustomField>
    <fullName>Prevailing_Wage_Cost__c</fullName>
    <formula>((Civil_Installation__c +  Electrical_Installation__c +  Mechanical_Installation__c) / (1 +  Prevailing_Wage__c))* Prevailing_Wage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prevailing Wage ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>