test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/fields/Racking_Foundation_W__c.field-meta.xml
<CustomField>
    <fullName>Racking_Foundation_W__c</fullName>
    <formula>Racking_Foundations__c /( System_Size_kW_DC__c * 1000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Racking &amp; Foundations ($/W)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>