test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/fields/Racking_Foundations__c.field-meta.xml
<CustomField>
    <fullName>Racking_Foundations__c</fullName>
    <formula>CE_Racking_Foundations__c +  Design_AEP__r.Racking__c*(1 +  Tax_Rate_Material__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Racking &amp; Foundations ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>