test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/fields/Real_Estate_W__c.field-meta.xml
<CustomField>
    <fullName>Real_Estate_W__c</fullName>
    <formula>Real_Estate__c /(  System_Size_kW_DC__c * 1000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Real Estate ($/W)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>