test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/fields/Stump_Removal_Area__c.field-meta.xml
<CustomField>
    <fullName>Stump_Removal_Area__c</fullName>
    <formula>Design_AEP__r.Stump_Removal__c * Design_AEP__r.Tree_Clear_Area_acres__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stump Removal Area</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>