test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <label>Survey ($)</label>
    <summarizedField>Labor_Selection__c.Cost__c</summarizedField>
    <summaryFilterItems>
        <field>Labor_Selection__c.Type__c</field>
        <operation>equals</operation>
        <value>Survey</value>
    </summaryFilterItems>
    <summaryForeignKey>Labor_Selection__c.NEW_Cost_Assumption_Set__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>