test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/fields/System_Cost__c.field-meta.xml
<CustomField>
    <fullName>System_Cost__c</fullName>
    <formula>Indirect_Labor__c +  Direct_Labor__c +  Direct_Material__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>System Cost ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>