test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/fields/System_Cost_W__c.field-meta.xml
<CustomField>
    <fullName>System_Cost_W__c</fullName>
    <formula>System_Cost__c/(  System_Size_kW_DC__c * 1000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>System Cost ($/W)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>