test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/fields/System_Size_kW_DC__c.field-meta.xml
<CustomField>
    <fullName>System_Size_kW_DC__c</fullName>
    <formula>Design_AEP__r.System_Size_kW_DC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>System Size (kW DC)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>