test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/fields/Tax_Rate_Material__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate_Material__c</fullName>
    <label>Tax Rate - Material (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>