test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/fields/Taxes_Material__c.field-meta.xml
<CustomField>
    <fullName>Taxes_Material__c</fullName>
    <formula>(Direct_Material__c/(1 + Tax_Rate_Material__c)) * Tax_Rate_Material__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Taxes - Material ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>