test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/fields/Toggle_save__c.field-meta.xml
<CustomField>
    <fullName>Toggle_save__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Toggle save</label>
    <type>Checkbox</type>
</CustomField>