test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/fields/Trenching_Distance__c.field-meta.xml
<CustomField>
    <fullName>Trenching_Distance__c</fullName>
    <formula>Design_AEP__r.LV_Trenching_Distance_LF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trenching Distance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>