test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/fields/Unsaved_Changes__c.field-meta.xml
<CustomField>
    <fullName>Unsaved_Changes__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Process Automations</fullName>
            </value>
            <value>
                <fullName>Finalize CRU</fullName>
            </value>
            <value>
                <fullName>No Pending Updates</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>