test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/fields/Update_CRU__c.field-meta.xml
<CustomField>
    <fullName>Update_CRU__c</fullName>
    <inlineHelpText>If this is changed to &quot;Yes&quot;, costs are calculated on save. If costs have just been calculated, and this is still &quot;Yes&quot;, wait for a minute before calculating costs again to avoid an error.</inlineHelpText>
    <label>Update CRU?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>