test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/recordTypes/Project.recordType-meta.xml
<RecordType>
    <fullName>Project</fullName>
    <active>true</active>
    <description>Used for individual projects</description>
    <label>Project</label>
</RecordType>