test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/recordTypes/Template.recordType-meta.xml
<RecordType>
    <fullName>Template</fullName>
    <active>true</active>
    <description>Used for cloning purposes</description>
    <label>Template</label>
</RecordType>