test/force-app/main/default/objects/NEW_Cost_Assumption_Set__c/validationRules/Approved_upon_double_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Approved_upon_double_check</fullName>
    <active>true</active>
    <description>Status can only be approved if prevailing and taxes are checked.</description>
    <errorConditionFormula>ISPICKVAL(Unsaved_Changes__c, &apos;Approved&apos;) &amp;&amp;
(Check_Prevailing__c = FALSE || Check_Taxes__c = FALSE)</errorConditionFormula>
    <errorMessage>Did you forget to double-check prevailing wage and taxes?</errorMessage>
</ValidationRule>